--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "element-ui": "^2.13.2",
     "normalize.css": "^8.0.1",
     "vue": "^2.5.2",
