--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@turf/boolean-contains": "^6.0.1",
+    "@turf/boolean-overlap": "^6.0.1",
+    "@turf/circle": "^6.0.1",
     "axios": "^0.21.0",
     "element-ui": "^2.13.2",
+    "html2canvas": "^1.0.0-rc.7",
+    "leaflet-draw": "^1.0.4",
     "normalize.css": "^8.0.1",
+    "terraformer-wkt-parser": "^1.2.1",
+    "turf": "^3.0.14",
     "vue": "^2.5.2",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.0.1"
@@ -29,11 +36,13 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -42,12 +51,16 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.28.0",
+    "sass-loader": "^7.3.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^2.0.0",
+    "stylus-loader": "^4.2.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
